[package]
name = "st"
edition = "2024"
version = "0.0.1"

[[bin]]
name = "st-topic"
path = "src/topic/main.rs"

[[bin]]
name = "st-todo"
path = "src/todo/main.rs"

[[bin]]
name = "st-note"
path = "src/note/main.rs"

[[bin]]
name = "st-list"
path = "src/list/main.rs"

[[bin]]
name = "st-done"
path = "src/done/main.rs"

[[bin]]
name = "st-init"
path = "src/init/main.rs"

[[bin]]
name = "st-pull"
path = "src/pull/main.rs"

[[bin]]
name = "st-add"
path = "src/add/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
