[package]
name = "st"
edition = "2024"
version = "0.0.1"

[[bin]]
name = "st-list"
path = "src/list/main.rs"

[[bin]]
name = "st-init"
path = "src/init/main.rs"

[[bin]]
name = "st-pull"
path = "src/pull/main.rs"

[[bin]]
name = "st-add"
path = "src/add/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
