[package]
name = "st"
edition = "2024"
version = "0.0.1"

[[bin]]
name = "st-list"
path = "src/list/main.rs"

[[bin]]
name = "st-init"
path = "src/init/main.rs"

[[bin]]
name = "st-pull"
path = "src/pull/main.rs"

[[bin]]
name = "st-add"
path = "src/add/main.rs"

[[bin]]
name = "st-server"
path = "src/server/main.rs"

[[bin]]
name = "st-apply"
path = "src/apply/main.rs"

[dependencies]
actix-web = "4.13.0"
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2.186"
markdown = "1.0.0"
toml = "1.1.2"
